[package]
name = "rlib"
version = "0.1.0"
edition = "2024"

[dependencies]
mimalloc = { version = "0.1.52", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[[bin]]
name = "rlib"
path = "src/main.rs"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'fat'
debug = false
overflow-checks = false